--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       e.preventDefault();
       const data = Object.fromEntries(new FormData(form).entries());
 
-      fetch('19_8Fn4u2YbqjQP19HlF3VNo936KE2QBqcfP7QH-DSHQ', {
+      fetch('https://script.google.com/macros/s/AKfycbwuPXSPkoUKormtYJEbwaixXd8GT5R3YWecxaFmqxBpJVKOE_jExUcnFvlKasujEoIN/exec', {
         method: 'POST',
         body: JSON.stringify(data),
         headers: { 'Content-Type': 'application/json' }
