--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <div class="container">
-  <h3 class="text-center mb-4">ระบบจองนัด รพ.วีระผลการแพทย์</h3>
+  <h3 class="text-center mb-4">ระบบจองนัด </h3>
   <form id="appointmentForm">
     <div class="mb-3">
       <label for="patient_name" class="form-label">ชื่อผู้ป่วย</label>
