--- a/index.html
+++ b/index.html
@@ -2,83 +2,190 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
+  <title>ระบบจองนัด รพ.วีระพลการแพทย์</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ระบบจองนัด รพ.วีระผลการแพทย์</title>
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font + Flatpickr + SweetAlert2 -->
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
   <style>
     body {
       font-family: 'Prompt', sans-serif;
-      background-color: #f0f2f5;
+      background: linear-gradient(to right, #e3f2fd, #f0f8ff);
+      padding: 20px;
     }
-    .container {
-      max-width: 480px;
-      margin-top: 40px;
+    .form-card {
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      max-width: 600px;
+      margin: 40px auto;
+    }
+    h3 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-weight: 600;
+      color: #0d6efd;
+    }
+    .logo {
+      display: block;
+      margin: 0 auto 20px;
+      width: 100px;
+    }
+    .btn-primary {
+      background-color: #0d6efd;
+      border: none;
+    }
+    .btn-primary:hover {
+      background-color: #0b5ed7;
+    }
+    .btn-line {
+      background-color: #00c300;
+      color: white;
+    }
+    .btn-line:hover {
+      background-color: #00a000;
+    }
+    label {
+      font-weight: 500;
     }
   </style>
 </head>
 <body>
 
-<div class="container">
-  <h3 class="text-center mb-4">ระบบจองนัด </h3>
-  <form id="appointmentForm">
-    <div class="mb-3">
-      <label for="patient_name" class="form-label">ชื่อผู้ป่วย</label>
-      <input type="text" class="form-control" id="patient_name" name="patient_name" required>
+  <div class="form-card">
+    <!-- โลโก้โรงพยาบาล -->
+    <div class="text-center mb-3">
+      <img src="https://raw.githubusercontent.com/amnaj5412/appointment-form/main/logo.png"
+           alt="โลโก้โรงพยาบาล"
+           style="max-width: 160px; height: auto;">
     </div>
-    <div class="mb-3">
-      <label for="citizen_id" class="form-label">เลขบัตรประชาชน</label>
-      <input type="text" class="form-control" id="citizen_id" name="citizen_id" required>
-    </div>
-    <div class="mb-3">
-      <label for="phone" class="form-label">เบอร์โทร</label>
-      <input type="tel" class="form-control" id="phone" name="phone" required>
-    </div>
-    <div class="mb-3">
-      <label for="doctor" class="form-label">แพทย์</label>
-      <input type="text" class="form-control" id="doctor" name="doctor">
-    </div>
-    <div class="mb-3">
-      <label for="date" class="form-label">วันนัด</label>
-      <input type="date" class="form-control" id="date" name="date" required>
-    </div>
-    <div class="mb-3">
-      <label for="time" class="form-label">ช่วงเวลา</label>
-      <select class="form-select" id="time" name="time" required>
-        <option value="09:00 - 12:00">09:00 - 12:00</option>
-        <option value="13:00 - 16:00">13:00 - 16:00</option>
-      </select>
-    </div>
-    <button type="submit" class="btn btn-primary w-100">ยืนยันการจอง</button>
-  </form>
 
-  <div id="alert" class="alert mt-3 d-none" role="alert"></div>
-</div>
+    <h3>ระบบจองนัด</h3>
 
-<script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbwKTBlRjUks2We6SKtfWIXEmvoWc5KLnfNiSZHYwuktR5tumHY6Oh31y6jIJ9KHYciQ/exec';
-  const form = document.getElementById('appointmentForm');
-  const alertBox = document.getElementById('alert');
+    <form id="bookingForm">
+      <div class="mb-3">
+        <label>ชื่อผู้ป่วย</label>
+        <input type="text" class="form-control" name="patient_name" required>
+      </div>
+      <div class="mb-3">
+        <label>เลขบัตรประชาชน</label>
+        <input type="text" class="form-control" name="citizen_id" pattern="\d{13}" maxlength="13" required>
+      </div>
+      <div class="mb-3">
+        <label>เบอร์โทร</label>
+        <input type="tel" class="form-control" name="phone" required>
+      </div>
+      <div class="mb-3">
+        <label>แพทย์ที่ต้องการพบ</label>
+        <select class="form-select" name="doctor" required>
+          <option value="">-- กรุณาเลือก --</option>
+          <option>นพ.วีระพล พจน์จลองศิลป์</option>
+          <option>นพ.พนิช พจน์จลองศิลป์</option>
+          <option>พญ.สุมณทิพย์ พจน์จลองศิลป์</option>
+          <option>พญ.บุษบงก์ ดวงมาตย์พล</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label>วันที่นัด</label>
+        <input type="text" id="date" class="form-control" name="date" required>
+      </div>
+      <div class="mb-3">
+        <label>ช่วงเวลาที่นัด</label>
+        <select class="form-select" name="time" required>
+          <option value="">-- กรุณาเลือก --</option>
+          <option>09:00 - 12:00</option>
+          <option>13:00 - 16:00</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">ยืนยันการจอง</button>
+    </form>
 
-  form.addEventListener('submit', e => {
-    e.preventDefault();
-    const formData = new FormData(form);
+    <div class="text-center mt-4">
+      <a href="https://line.me/R/ti/p/@981gqmdr" target="_blank" class="btn btn-line w-100">
+        💬 แชทกับเจ้าหน้าที่ผ่าน LINE
+      </a>
+    </div>
+  </div>
 
-    fetch(scriptURL, { method: 'POST', body: formData })
-      .then(response => response.text())
-      .then(result => {
-        alertBox.className = 'alert alert-success mt-3';
-        alertBox.textContent = '✅ จองนัดสำเร็จแล้ว';
-        alertBox.classList.remove('d-none');
-        form.reset();
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/th.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script>
+    // Flatpickr: พ.ศ.
+    flatpickr("#date", {
+      dateFormat: "d/m/Y",
+      locale: "th",
+      altInput: true,
+      altFormat: "d/m/Y",
+      onReady: function(selectedDates, dateStr, instance) {
+        const yearElem = instance.currentYearElement;
+        if (yearElem) {
+          const year = parseInt(yearElem.value);
+          if (!isNaN(year) && year < 2500) {
+            yearElem.value = year + 543;
+          }
+          yearElem.addEventListener("blur", function() {
+            let val = parseInt(this.value);
+            if (!isNaN(val)) {
+              if (val < 2400) this.value = val + 543;
+            }
+          });
+        }
+      },
+      onChange: function(selectedDates, dateStr, instance) {
+        const y = selectedDates[0].getFullYear();
+        if (y < 2500) {
+          instance.currentYearElement.value = y + 543;
+        }
+      }
+    });
+
+    const form = document.getElementById('bookingForm');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const data = Object.fromEntries(new FormData(form).entries());
+
+      fetch('https://script.google.com/macros/s/AKfycbwuPXSPkoUKormtYJEbwaixXd8GT5R3YWecxaFmqxBpJVKOE_jExUcnFvlKasujEoIN/exec', {
+        method: 'POST',
+        body: JSON.stringify(data),
+        headers: { 'Content-Type': 'application/json' }
       })
-      .catch(error => {
-        alertBox.className = 'alert alert-danger mt-3';
-        alertBox.textContent = '❌ เกิดข้อผิดพลาดในการส่งข้อมูล';
-        alertBox.classList.remove('d-none');
-        console.error('Error!', error.message);
+      .then(res => res.text())
+      .then(text => {
+        if (text === 'success') {
+          Swal.fire({
+            icon: 'success',
+            title: 'จองนัดสำเร็จ!',
+            text: 'ขอบคุณที่ใช้บริการ',
+            confirmButtonColor: '#0d6efd'
+          });
+          form.reset();
+        } else {
+          Swal.fire({
+            icon: 'error',
+            title: 'เกิดข้อผิดพลาด',
+            text: 'ไม่สามารถส่งข้อมูลได้ กรุณาลองใหม่',
+            confirmButtonColor: '#d33'
+          });
+        }
+      })
+      .catch(() => {
+        Swal.fire({
+          icon: 'error',
+          title: 'ระบบผิดพลาด',
+          text: 'กรุณาตรวจสอบเครือข่ายหรือเซิร์ฟเวอร์',
+          confirmButtonColor: '#d33'
+        });
       });
-  });
-</script>
-
+    });
+  </script>
 </body>
 </html>
