--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            style="max-width: 160px; height: auto;">
     </div>
 
-    <h3>ระบบจองนัด รพ.วีระพลการแพทย์</h3>
+    <h3>ระบบจองนัด</h3>
 
     <form id="bookingForm">
       <div class="mb-3">
