--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 class="logo">
         </div>
 
-        <h3>ระบบจองนัด</h3>
+        <h3>ระบบจองนัด รพ.วีระพลการแพทย์</h3>
 
         <form id="bookingForm">
             <div class="mb-3">
