--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-
+    <!-- Favicon (แนะนำวางไว้ที่ /hospital/ รากของเว็บ) -->
+    <link rel="icon" type="image/svg+xml" href="/hospital/favicon.svg?v=2">
+    <link rel="icon" type="image/png" sizes="32x32" href="/hospital/favicon-32.png?v=2">
+    <link rel="icon" type="image/png" sizes="16x16" href="/hospital/favicon-16.png?v=2">
+    <link rel="shortcut icon" href="/hospital/favicon.ico?v=2">
+    <link rel="apple-touch-icon" href="/hospital/apple-touch-icon.png?v=2">
+    <meta name="theme-color" content="#0d6efd">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QZ0FG8PVXQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZ0FG8PVXQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-QZ0FG8PVXQ');
-</script>
+      gtag('config', 'G-QZ0FG8PVXQ');
+    </script>
 
     <style>
         :root {
@@ -271,4 +277,5 @@
     </script>
 </body>
 </html>
+
 
